--- a/Destinations/views/destinations.ejs
+++ b/Destinations/views/destinations.ejs
@@ -4,6 +4,13 @@
         <div class="navbar-header"> 
             <a href="/" class="navbar-brand">Destinations</a>
         </div>
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li> <a href="/">Login</a> </li>
+                <li> <a href="/">Sign Up</a> </li>
+                <li> <a href="/">Logout</a> </li>
+            </ul>
+        </div>
     </div>
 </nav>
 <div class="container">
