--- a/Destinations/views/new.ejs
+++ b/Destinations/views/new.ejs
@@ -1,10 +1,25 @@
 <% include partials/header%>
 
-<h1>Add a new destination!</h1>
-<form action="/destinations" method="POST">
-    <input type="text" name="name" placeholder="Name">
-    <input type="text" name="image" placeholder="imageURL">
-    <button>Submit</button>
-</form>
+<div class="container">
+    <div class="row">
+        <h1 style="text-align: center;">Add a new destination!</h1>
+        <div style="width: 30%; margin: 25px auto;">
+            <form action="/destinations" method="POST">
+                <div class="form-group">
+                    <input class ="form-control" type="text" name="name" placeholder="Name">
+                </div>
+                <div class="form-group">
+                    <input class ="form-control" type="text" name="image" placeholder="imageURL">
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-lg btn-primary btn-block">Submit</button>
+                </div>  
+            </form>
+            <a href="/">Go Back</a>
+        </div>
+    </div>
+    
+
+</div>
 
 <% include partials/footer%>
