--- a/Destinations/views/show.ejs
+++ b/Destinations/views/show.ejs
@@ -4,4 +4,8 @@
 <img src="<%= location.image %>" alt="">
 <%= location.description%>
 
+<% location.comments.forEach(function(comment){ %>
+    <p><strong><%= comment.author %></strong> - <%=comment.text%></p>
+<%})%>
+
 <% include partials/footer%>
