--- a/Destinations/views/destinations/show.ejs
+++ b/Destinations/views/destinations/show.ejs
@@ -1,11 +1,11 @@
-<% include partials/header%>
+<% include ../partials/header%>
 <h1>This is the show template</h1>
 <%= location.name%>
 <img src="<%= location.image %>" alt="">
 <%= location.description%>
-
+<a href="/destinations/<%= location._id%>/comments/new" class="btn btn-success">Add new comment</a>
 <% location.comments.forEach(function(comment){ %>
     <p><strong><%= comment.author %></strong> - <%=comment.text%></p>
 <%})%>
 
-<% include partials/footer%>
+<% include ../partials/footer%>
