--- a/Destinations/views/destinations/show.ejs
+++ b/Destinations/views/destinations/show.ejs
@@ -1,11 +1,39 @@
 <% include ../partials/header%>
-<h1>This is the show template</h1>
-<%= location.name%>
-<img src="<%= location.image %>" alt="">
-<%= location.description%>
-<a href="/destinations/<%= location._id%>/comments/new" class="btn btn-success">Add new comment</a>
-<% location.comments.forEach(function(comment){ %>
-    <p><strong><%= comment.author %></strong> - <%=comment.text%></p>
-<%})%>
+<div class="container">
+   <div class="row">
+       <div class="col-md-3">
+                <p class="lead">Travel Information</p>
+                <div class="list-group">
+                    <li class="list-group-item active">Info 1</li>
+                    <li class="list-group-item"> Info 2</li>
+                    <li class="list-group-item"> Info 3</li>
+                </div>
+       </div>
+       <div class="col-md-9">
+            <h1><%=location.name%></h1>
+            <div class="thumbnail">
+                <img src="<%=location.image%>" class="image-responsive">
+                <div class="caption">
+                    <p><%=location.description%></p>
+                </div>
+            </div>
+            <div class="well">
+                <div class="text=right">
+                    <a href="/destinations/<%=location._id%>/comments/new" class="btn btn-success">Leave a Review</a>
+                    <hr>
+                </div>
+                <%location.comments.forEach(function(comment){%>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <strong><%= comment.author%></strong>
+                            <span class="pull-right">10 days ago</span>
+                            <p><%= comment.text%></p>
+                        </div>
+                    </div>
+                <%})%>
+            </div>
 
+       </div>
+   </div>
+</div>
 <% include ../partials/footer%>
