users associated with comments

--- a/Destinations/views/landing.ejs
+++ b/Destinations/views/landing.ejs
@@ -1,3 +1,4 @@
 <% include partials/header %>
 <h1>This is the landing page!</h1>
+<h4><a href="/destinations">View all destinations</a></h4>
 <% include partials/footer %>
