updated destination schema to store author information + only valid users can add destination

--- a/Destinations/views/destinations/show.ejs
+++ b/Destinations/views/destinations/show.ejs
@@ -15,6 +15,7 @@
                 <img src="<%=location.image%>" class="image-responsive">
                 <div class="caption">
                     <p><%=location.description%></p>
+                    <p><em>Submitted by <%= location.author.username%></em></p>
                 </div>
             </div>
             <div class="well">
