functionality to edit destinations

--- a/Destinations/views/destinations/show.ejs
+++ b/Destinations/views/destinations/show.ejs
@@ -16,6 +16,7 @@
                 <div class="caption">
                     <p><%=location.description%></p>
                     <p><em>Submitted by <%= location.author.username%></em></p>
+                    <a class= "btn btn-warning" href="/destinations/<%= location.id%>/edit">Edit</a>
                 </div>
             </div>
             <div class="well">
