added delete functionaloty

--- a/Destinations/views/destinations/show.ejs
+++ b/Destinations/views/destinations/show.ejs
@@ -17,6 +17,9 @@
                     <p><%=location.description%></p>
                     <p><em>Submitted by <%= location.author.username%></em></p>
                     <a class= "btn btn-warning" href="/destinations/<%= location.id%>/edit">Edit</a>
+                    <form id="delete-form" action="/destinations/<%= location.id%>?_method=DELETE" method="POST">
+                        <button class="btn btn-danger"> Delete</button>
+                    </form>
                 </div>
             </div>
             <div class="well">
