--- a/Destinations/views/destinations/show.ejs
+++ b/Destinations/views/destinations/show.ejs
@@ -36,11 +36,14 @@
                             <strong><%= comment.author.username%></strong>
                             <span class="pull-right">10 days ago</span>
                             <p><%= comment.text%></p>
+                            <a class= "btn btn-warning btn-xs" 
+                               href="/destinations/<%= location.id%>/comments/<%=comment._id%>/edit">
+                               Edit
+                            </a>
                         </div>
                     </div>
                 <%})%>
             </div>
-
        </div>
    </div>
 </div>
