--- a/Destinations/views/destinations/show.ejs
+++ b/Destinations/views/destinations/show.ejs
@@ -36,6 +36,7 @@
                             <strong><%= comment.author.username%></strong>
                             <span class="pull-right">10 days ago</span>
                             <p><%= comment.text%></p>
+                            <% if(currentUser && comment.author.id.equals(currentUser._id)){%>
                             <a class= "btn btn-warning btn-xs" 
                                href="/destinations/<%= location.id%>/comments/<%=comment._id%>/edit">
                                Edit
@@ -43,6 +44,7 @@
                             <form class=" delete-form" action="/destinations/<%=location._id%>/comments/<%=comment._id%>?_method=DELETE" method="POST">
                             <input type="Submit" value="Delete" class="btn btn-xs btn-danger">
                             </form>
+                            <%}%>
                         </div>
                     </div>
                 <%})%>
